name:                station
version:             0.1.0.0
author:              Tomato
maintainer:          Tomato.HF@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable station
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base >=4.6 && <4.7,
                       containers >=0.5,
                       network >=2.6
  default-language:    Haskell2010
